    optionally solve for only a few bands at a time instead of all
    at once, reducing memory requirements and often increasing speed.

  * Improved handling of the singular (zero-frequency) solutions at
    the Gamma (k=0) point.  This k point should no longer converge
    slowly (or cause additional problems in the targeted eigensolver).

  * compute-field-energy function now also returns the fraction of the
    energy in the various field components.

  * Added first-brillouin-zone function to transform an arbitrary
    k-point into an equivalent point in the first Brillouin zone.
    Thanks to Payam Rabiei for the suggestion.

  * In mpb-data, the center of the output cell is now always identical
    to the origin of the coordinate system.  Thanks to Michelle
    Povinelli for pointing out this deficiency.	

  * Used improved spherical-quadrature formula in computing the
    effective dielectric tensor in 3d; this should increase accuracy
    somewhat at lower grid resolutions.

MPB 0.12 (7/9/2000)

  * Added fix-*field-phase functions to allow a deterministic phase
    in the output fields, thanks to a suggestion by Doug Allan.

  * Added group-velocity calculation functions (display-group-velocities,
    etcetera).

  * Added -e x,y,z option to mpb-data so that you can now specify
    an orientation of the output cell (e.g. to make the first axis
    the 111 direction of an fcc crystal).

  * Added (index n) substitute for epsilon property of dielectrics,
    equivalent to (epsilon (* n n)).

  * Documented new libgeom features: cone geometric object, coordinate
    conversion functions (reciprocal->lattice, lattice->cartesian, etc.),
    and vector/matrix rotation.

  * compute-field-energy now returns the total, unnormalized energy
    in the corresponding field; combined with compute-energy-in-objects,
    this makes it easy to do some perturbation theory and related
    calculations.

  * Eigensolver improvements.  Periodic reorthogonalization and